--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My First Project</h1>
+    <h1>Welcome to My very First Project</h1>
     <p>This is a simple makeshift project. <br> which im planning to make a huge success</p>
     <p>All it takes is a little dedication, and consistency to prevail.</p>
 </body>
