--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Welcome to My very First Project</h1>
+    <h1>Feature Branch Heading</h1>
     <p>This is a simple makeshift project. <br> which im planning to make a huge success</p>
     <p>All it takes is a little dedication, and consistency to prevail.</p>
 </body>
